exnteion index change

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Base
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Technical Page for TTV Right Now</title>
+        <style>
+            html, body {
+                margin: 0;
+                padding: 0;
+                background-color: #3b323f;
+            }
+        </style>
+    </head>
+    <body>
+
+    </body>
+</html>
