--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
         <style>
             html, body {
                 margin: 0;
-                padding: 0;
+                padding-top: 25px;
                 background-color: #3b323f;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                text-align: center;
+                color: white;
             }
         </style>
     </head>
     <body>
-
+        Wait a few seconds...
     </body>
 </html>
