--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                 text-align: center;
                 color: white;
+                font-size: 30px;
             }
         </style>
     </head>
     <body>
-        Wait a few seconds...
+        Please wait a few seconds...
     </body>
 </html>
