--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
         </style>
         <script>
             var ttvRightNowID = "jaebeaoffbboingfjbdkgbnnfdkjilld";
-
-            window.addEventListener("load", function() {
-                console.log("Loaded");
-            });
+            var twitchToken = "none";
 
             function messageExtention() {
-                chrome.runtime.sendMessage(ttvRightNowID, {openUrlInEditor: url},
+                chrome.runtime.sendMessage(ttvRightNowID, {requestType: "setTtvToken", ttvToken: twitchToken},
                 function(response) {
                     if (!response.success) {
                         document.getElementById("mainMessage").innerHTML = "An issue occured while communicating with the extension.<br />Are you sure it is properly installed ?";
@@ -30,6 +27,10 @@
                     }
                 })
             }
+
+            window.addEventListener("load", function() {
+                console.log("Loaded");
+            });
         </script>
     </head>
     <body>
