--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             }
 
             function getHashParameters() {
-                var hashParams = [];
+                var hashParams = new Map();
 
                 window.location.hash.substr(1).split('&').forEach(function(element) {
                     let newElem = element.split('=');
-                    hashParams.push(newElem[0], newElem[1]);
+                    hashParams.set(newElem[0], newElem[1]);
                 })
 
                 console.log(hashParams);
