Changed refresh to chrome alarm api + added last update

--- a/popup.html
+++ b/popup.html
@@ -23,7 +23,10 @@
             will be showed here once you're logged in.<br /><br />
             Use the button located in the<br />upper right corner.
         </div>
-        <div id="streams">
+        <div id="streams-page" style="display: block;">
+            <div id="streams">
+
+            </div>
             <!--div class="stream">
                 <img class="stream-pic" src="https://static-cdn.jtvnw.net/previews-ttv/live_user_sodapoppin-160x90.jpg" />
                 <div class="streamer-name" title="sodapoppin">sodapoppin</div>
@@ -38,6 +41,9 @@
                     </div>
                 </div>
             </div-->
+            <div id="informations" style="display: block;">
+                <span id="last-streams-update"></span>
+            </div>
         </div>
     </body>
 </html>
