--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 chrome.runtime.sendMessage(ttvRightNowID, {requestType: "setTtvToken", ttvToken: getHashParameters("access_token")},
                 function(response) {
                     if (response.status == "success") {
-                        document.getElementById("mainMessage").innerHTML = "Successfully logged in !<br />You can close this tab.";
+                        document.getElementById("mainMessage").innerText = "Successfully logged in !<br />You can close this tab.";
                     } else {
-                        document.getElementById("mainMessage").innerHTML = "An issue occured while communicating with the extension.<br />(" + response.status + ")";
+                        document.getElementById("mainMessage").innerText = "An issue occured while communicating with the extension.<br />(" + response.status + ")";
                     }
                 })
             }
