--- a/popup.html
+++ b/popup.html
@@ -3,8 +3,11 @@
     <head>
         <link rel="stylesheet" href="style/mainframe.css" />
         <link rel="stylesheet" href="style/bottombar.css" />
+        <link rel="stylesheet" href="style/checkbox.css" />
         <script src="scripts/popup.js"></script>
         <script src="scripts/tabs.js"></script>
+        <script src="scripts/tab_notifications.js"></script>
+        <script src="scripts/notification.js"></script>
     </head>
     <body>
         <div id="top-bar">
@@ -48,10 +51,32 @@
         </div>
         <div class="tab" id="notifications-page" style="display: none;">
             <div id="notifications">
-                lul
+                <img src="images/loading.svg" />
+                <!--<div class="notification">
+                    <a href="https://twitch.tv/sodapoppin" target="_blank"><div class="streamer-name" title="Go to twitch.tv/sodapoppin">sodapoppin &#8599;	</div></a>
+                    <div class="followed-date">Followed since<br />June 26 2017, 17:04</div>
+                   <div class="notif-text">
+                       Enable Notifications
+                       <label class="enable-notifications switch">
+                           <input class="checkbox" type=checkbox >
+                           <span class="slider"></span>
+                        </label>
+                    </div>
+                </div>
+                <div class="notification">
+                    <a href="https://twitch.tv/sodapoppin" target="_blank"><div class="streamer-name" title="Go to twitch.tv/sodapoppin">sodapoppin &#8599;	</div></a>
+                    <div class="followed-date">Followed since<br />June 26 2017, 17:04</div>
+                    <div class="notif-text">
+                        Enable Notifications
+                        <label class="enable-notifications switch">
+                            <input class="checkbox" type=checkbox >
+                            <span class="slider"></span>
+                         </label>
+                     </div>
+                </div>-->
             </div>
             <div id="informations" style="display: block;">
-                <span id="last-streams-update">lul</span>
+                <span id="last-streams-update">Twitch Right Now</span>
             </div>
         </div>
         <div id="bottom-bar">
