--- a/popup.html
+++ b/popup.html
@@ -49,6 +49,13 @@
             </div>
         </div>
         <div class="tab" id="notifications-page" style="display: none;">
+            <div id="notify-all-streams" style="display: block;">
+                <span>Enable notifications for all streams</span>
+                <label class="enable-notifications switch">
+                    <input id="notify-all-streams-checkbox" class="checkbox" type=checkbox >
+                    <span class="slider"></span>
+                 </label>
+            </div>
             <div id="notifications">
                 <img src="images/loading.svg" />
                 <!--<div class="notification">
