Temporarily remove sorting for release candicate

--- a/popup.html
+++ b/popup.html
@@ -85,7 +85,7 @@
                 <span id="last-streams-update">Twitch Right Now</span>
             </div>
         </div>
-        <div id="bottom-bar">
+        <div id="bottom-bar" style="display: block;">
             <div class="icon" style="display: none; width: 25px; height: 25px; margin-top: 5px; margin-left: 4px;"></div>
             <div id="tabs">
                 <div class="tab-button" id="followed-streams-button">
@@ -105,7 +105,7 @@
                     <svg width="23px" height="23px" version="1.1" viewBox="0 0 20 20" x="0px" y="0px" class="svg-icon"><g><path fill-rule="evenodd" d="M4 3h12l2 4v10H2V7l2-4zm.236 4H8v1a1 1 0 001 1h2a1 1 0 001-1V7h3.764l-1-2H5.236l-1 2zM16 9h-2.17A3.001 3.001 0 0111 11H9a3.001 3.001 0 01-2.83-2H4v6h12V9z" clip-rule="evenodd"></path></g></svg>
                 </div>
             </div>
-            <div id="random-buttons">
+            <div id="random-buttons" style="display: none;">
                 <div id="layouts">
                     <div class="layout-button tab-button" id="descendant-filter">
                         <img src="images/order-descendant.svg" class="svg-icon" style="width: 23px; height: 23px;" />
