Renamed to Twitch Right Now (again)
Renamed, because it's actually harder to find on the chrome webstore now

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Technical Page for TTV Right Now</title>
+        <title>Twitch Right Now : Login</title>
         <style>
             html, body {
                 margin: 0;
