--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>TTV Right Now</title>
+    <title>Twitch Right Now</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
